--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
-    "idf.idfPath": "C:/esp/esp-idf",
-    "idf.idfToolsPath": "C:/esp/tools", 
-    "idf.pythonBinPath": "C:/esp/tools/python_env/idf6.0_py3.14_env/Scripts/python.exe",
-    "idf.comPort": "COM5",
+    "idf.idfPath": "D:/esp/esp-idf",
+    "idf.idfToolsPath": "D:/esp/tools", 
+    "idf.pythonBinPath": "D:/esp/tools/python_env/idf6.0_py3.14_env/Scripts/python.exe",
+    "idf.comPort": "COM6",
 
+    "terminal.integrated.defaultProfile.windows": "Command Prompt",
+    "terminal.integrated.profiles.windows": {
+        "Command Prompt": {
+            "path": "cmd.exe"
+        }
+    },
+    "terminal.integrated.windowsEnableConpty": false
 }
