--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "format": "c",
         "esp_log.h": "c",
         "string.h": "c",
-        "esp_err.h": "c"
+        "esp_err.h": "c",
+        "cstdlib": "c"
     }
 }
