--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES
     main.c
     parameters/parameters.c
     wifiServer/wifi_control.c
+    wifiServer/webServer.c
 )
 
 set(INCLUDES
@@ -12,5 +13,5 @@ set(INCLUDES
 
 idf_component_register(SRCS ${SOURCES}
                        INCLUDE_DIRS ${INCLUDES}
-                       PRIV_REQUIRES spi_flash
-                       REQUIRES esp_driver_gpio esp_http_server driver esp_wifi esp_netif esp_event nvs_flash)
+                       PRIV_REQUIRES spiffs  
+                       REQUIRES esp_driver_gpio esp_http_server driver esp_wifi esp_netif esp_event nvs_flash wpa_supplicant vfs lwip)
