--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,7 +3,10 @@ set(SOURCES
     parameters/parameters.c
     wifiServer/wifi_control.c
     wifiServer/webServer.c
+    wifiServer/mDNS_.c
     periferial/led.c
+    periferial/temperature_sensor.c
+    periferial/drivers/ds18b20.c
 )
 
 set(INCLUDES
@@ -11,9 +14,10 @@ set(INCLUDES
     wifiServer
     parameters
     periferial
+    periferial/drivers
 )
 
 idf_component_register(SRCS ${SOURCES}
                        INCLUDE_DIRS ${INCLUDES}
-                       PRIV_REQUIRES spiffs  
+                       PRIV_REQUIRES spiffs
                        REQUIRES esp_driver_gpio esp_http_server driver esp_wifi esp_netif esp_event nvs_flash wpa_supplicant vfs lwip)
