--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-    "idf.idfDisk": "C",
+    "idf.idfDisk": "D",
     "idf.idfPath": "${config:idf.idfDisk}:/esp/esp-idf",
     "idf.idfToolsPath": "${config:idf.idfDisk}:/esp/tools", 
     "idf.pythonBinPath": "${config:idf.idfDisk}:/esp/tools/python_env/idf6.0_py3.13_env/Scripts/python.exe",
-    "idf.comPort": "COM6",
+    "idf.comPort": "COM7",
 
     "terminal.integrated.defaultProfile.windows": "Command Prompt",
     "terminal.integrated.profiles.windows": {
