--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -16,6 +16,12 @@ set(SOURCES
     periferial/statistic.c
     periferial/drivers/ds18b20.c
     periferial/adc_drv.c
+    periferial/modbus/modbus_master.c
+    periferial/modbus/driver/modbus_crc.c
+    periferial/modbus/driver/modbus_rtu_coils.c
+    periferial/modbus/driver/modbus_rtu_discrete_input.c
+    periferial/modbus/driver/modbus_rtu_holding_registers.c
+    periferial/modbus/driver/modbus_rtu_input_registers.c
     controller/algorithm/PID.c    
     controller/algorithm/Measure220V.c
     controller/algorithm/statistic_sampler.c
@@ -30,9 +36,11 @@ set(INCLUDES
     parameters
     periferial
     periferial/drivers
+    periferial/modbus
+    periferial/modbus/driver
 )
 
 idf_component_register(SRCS ${SOURCES}
                        INCLUDE_DIRS ${INCLUDES}
                        PRIV_REQUIRES spiffs
-                       REQUIRES esp_driver_gpio esp_http_server driver esp_wifi esp_netif esp_event nvs_flash wpa_supplicant vfs lwip esp_adc)
+                       REQUIRES esp_driver_uart esp_driver_gpio esp_http_server driver esp_wifi esp_netif esp_event nvs_flash wpa_supplicant vfs lwip esp_adc)
