--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -44,4 +44,4 @@ set(INCLUDES
 idf_component_register(SRCS ${SOURCES}
                        INCLUDE_DIRS ${INCLUDES}
                        PRIV_REQUIRES spiffs
-                       REQUIRES esp_driver_uart esp_driver_gpio esp_http_server driver esp_wifi esp_netif esp_event nvs_flash wpa_supplicant vfs lwip esp_adc)
+                       REQUIRES esp_driver_uart esp_driver_gpio esp_http_server driver esp_wifi esp_netif esp_event nvs_flash wpa_supplicant vfs lwip esp_adc esp_timer)
