--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -19,13 +19,15 @@ set(SOURCES
     periferial/statistic.c
     periferial/drivers/ds18b20.c
     periferial/adc_drv.c
+    periferial/ten_ctrl.c
+    periferial/buttons.c
+    periferial/radiator_fan.c
     periferial/modbus/modbus_master.c
     periferial/modbus/driver/modbus_crc.c
     periferial/modbus/driver/modbus_rtu_coils.c
     periferial/modbus/driver/modbus_rtu_discrete_input.c
     periferial/modbus/driver/modbus_rtu_holding_registers.c
     periferial/modbus/driver/modbus_rtu_input_registers.c    
-    periferial/ten_ctrl.c
 )
 
 set(INCLUDES
@@ -44,4 +46,4 @@ set(INCLUDES
 idf_component_register(SRCS ${SOURCES}
                        INCLUDE_DIRS ${INCLUDES}
                        PRIV_REQUIRES spiffs
-                       REQUIRES esp_driver_uart esp_driver_gpio esp_http_server driver esp_wifi esp_netif esp_event nvs_flash wpa_supplicant vfs lwip esp_adc esp_timer)
+                       REQUIRES esp_driver_uart esp_driver_gpio esp_http_server driver esp_wifi esp_netif esp_event nvs_flash wpa_supplicant vfs lwip esp_adc esp_timer esp_driver_ledc)
